# GAME-RIIR

./: .dir-locals.el  .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/ldtk/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_16-09-33/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_16-22-17/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_16-26-41/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_17-10-05/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_19-38-19/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_20-25-46/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_21-07-07/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_21-08-17/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-11_17-08-28/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-11_17-50-47/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-11_20-39-51/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-11_20-41-20/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-11_20-41-59/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-11_20-42-41/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-12_15-52-03/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-12_15-57-28/: Therac2D.ldtk
assets/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-12_15-59-18/: Therac2D.ldtk
assets/texts/: PARADISE_LOST.txt
resources/ldtk/: Therac2D.ldtk
resources/ldtk/Therac2D/backups/cf25f160-8990-11ee-bcab-bbe7356a2748_2023-12-10_15-23-36/: Therac2D.ldtk
src/: main.rs
src/game_riir/: data.rs
