[package]
name = "GAME-RIIR"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11"
space_editor = { git = "https://github.com/rewin123/space_editor.git", tag="v0.2.3" }
bevy_adventure = "0.6.0"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch="main" }
