[package]
name = "GAME-RIIR"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy_ecs_ldtk = { version = "0.8", git = "https://github.com/trouv/bevy_ecs_ldtk", branch = "feat/bevy-0.12" }
#bevy_hanabi = "0.8"
bevy_egui = "0.24"
bevy_asset_loader = "0.18.0"
rand = "0.8.5"
iyes_progress = { git = "https://github.com/IyesGames/iyes_progress", branch = "main" }
[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }

[[bin]]
path = "src/main.rs"
name = "GAME-RIIR"